hw12_13_14_15_calendar/deployments/calendar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-api
  template:
    metadata:
      labels:
        app: calendar-api
    spec:
      containers:
        - name: calendar-api
          image: dockerhub/calendar:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health  # Новый маршрут health для liveness пробы
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health  # Новый маршрут health для readiness пробы
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-scheduler
  template:
    metadata:
      labels:
        app: calendar-scheduler
    spec:
      containers:
        - name: calendar-scheduler
          image: dockerhub/calendar-scheduler:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-sender
  template:
    metadata:
      labels:
        app: calendar-sender
    spec:
      containers:
        - name: calendar-sender
          image: dockerhub/calendar-sender:latest
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 1
