hw12_13_14_15_calendar/deployments/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-api-service
spec:
  selector:
    app: calendar-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-scheduler-service
spec:
  selector:
    app: calendar-scheduler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-sender-service
spec:
  selector:
    app: calendar-sender
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
